//This file gets compiled into Java classes:
//HelloRequest , HelloReply , SimpleGrpc.SimpleImplBase
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.server.proto";
option java_outer_classname = "HelloWorldProto";

service Simple {
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}